--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.some-class{
+  margin: 0 auto;
+  width: 100px; 
+  background-color: #61dafb;
+}
+
+#root{
+  padding: 30px;
+}
