--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  ;
 }
 
 code {
@@ -19,4 +20,5 @@ code {
 
 #root{
   padding: 30px;
+  background-color: #F4F4F4;
 }
